discussion/kv_engine/181156/181156_rev10_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52682: Derive initial MFU of new values from MFU histograms

Historically, all new items start with a frequency counter of 4. As the
MFU of existing items may have increased through accesses (e.g.,
everything could be >100), new items would be more likely to be
evicted straight away, before potential accesses are able to increase
the frequency counter.

To counter this, "young" items (age determined from the HLC cas) were
made ineligible (config params item_eviction_age_percentage,
item_eviction_freq_counter_age_threshold).

Each vbucket currently tracks a histogram of the frequency counter of
all stored values which are eligible for eviction.

This patch uses these histograms select an appropriate starting
frequency counter, prepping new items to be at some configured
percentile of MFU values.

This is a step towards frequency counters being comparable across
vbuckets.

This patch does _not_ address the frequency counter of items bgfetched
from disk; currently they will have their freq counter set to whatever
value was present when the item was _persisted_, even if it had been
increased significantly before the item was eventually evicted.

A consequence of this is that read-heavy workloads may bgfetch items
and give them very outdated freq counters, leading to sub-optimal
eviction. This will be addressed in a following patch, by setting them
to the initial counter value discussed above.

Change-Id: Ifa107501d9e7b7e42d40f9d552781c7e6f626252

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2022-10-18 13:22:51.000000000
Message: 
Uploaded patch set 10: Patch Set 9 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-18 13:44:18.000000000
Message: 
Patch Set 10: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21241/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/initial_mfu_task.cc:14:10: error: "hotness_only_item_eviction.h" file not found [clang-diagnostic-error]
#include "hotness_only_item_eviction.h"
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21241/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/initial_mfu_task.cc:14:10:
error: "hotness_only_item_eviction.h" file not found [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21241/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50464/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/initial_mfu_task.cc(14): fatal error C1083: Cannot open include file: "hotness_only_item_eviction.h": No such file or directory ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50464/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42329/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/initial_mfu_task.cc:14:10:
fatal error: "hotness_only_item_eviction.h" file not found
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42329/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23271/ : FAILURE

Compile error at [2022-10-18T13:38:09.230Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/initial_mfu_task.cc:14:10:
fatal error: hotness_only_item_eviction.h: No such file or directory
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23271/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11071/ : FAILURE

Compile error at [2022-10-18T13:26:56.255Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/initial_mfu_task.cc:14:10:
fatal error: hotness_only_item_eviction.h: No such file or directory
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11071/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22692/ : FAILURE

Compile error at [2022-10-18T13:35:51.136Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/engines/ep/src/initial_mfu_task.cc:14:10:
fatal error: "hotness_only_item_eviction.h" file not found
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22692/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24507/ : FAILURE

Compile error at [2022-10-18T13:40:05.059Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/initial_mfu_task.cc:14:10:
fatal error: "hotness_only_item_eviction.h" file not found
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24507/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23672/ : FAILURE

Compile error at [2022-10-18T13:40:50.568Z] ../kv_engine/engines/ep/src/initial_mfu_task.cc:14:10:
fatal error: hotness_only_item_eviction.h: No such file or directory
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23672/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31689/ : FAILURE

Compile error at [2022-10-18T13:43:11.348Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/initial_mfu_task.cc:14:10:
fatal error: "hotness_only_item_eviction.h" file not found
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31689/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10975/ : FAILURE

Compile error at [2022-10-18T13:35:23.015Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/initial_mfu_task.cc:14:10:
fatal error: "hotness_only_item_eviction.h" file not found
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10975/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20492/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
